Added compiler feedback for Go and Java runners